# gpc-gl-wrappers

./: CMakeLists.txt
include/gpc/gl/: wrappers.hpp
lib/: CMakeLists.txt  lib_gpc-gl-wrappers-config.cmake.in
lib/include/gpc/gl/: wrappers.hpp
testsuite/: test.cpp
